# bday-greetings

./: hbd.py  pyproject.toml  requirements.txt
