[project]
name = "birthday-wishes-using-streamlit"
version = "0.1.0"
description = ""
authors = [
    {name = "fea",email = "fjvatabay@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.43.2,<2.0.0)",
    "streamlit-extras (>=0.5.5,<0.6.0)",
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
